--- a/index.html
+++ b/index.html
@@ -28,37 +28,100 @@
     <div id="content-wrapper">
       <div class="inner clearfix">
         <section id="main-content">
-          <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+          <h1>
+<a id="tools-list-for-the-2015" class="anchor" href="#tools-list-for-the-2015" aria-hidden="true"><span class="octicon octicon-link"></span></a>Tools list for the 2015.</h1>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
-
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
-</code></pre>
-
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
+<p>Continuous update on the page is on track.</p>
 
 <h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
+<a id="playgrounds" class="anchor" href="#playgrounds" aria-hidden="true"><span class="octicon octicon-link"></span></a>Playgrounds</h3>
 
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
-
-<h3>
-<a id="rather-drive-stick" class="anchor" href="#rather-drive-stick" aria-hidden="true"><span class="octicon octicon-link"></span></a>Rather Drive Stick?</h3>
-
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
-
-<h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
-
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
+<ul>
+<li><a href="http://www.codecademy.com">Code Academy</a></li>
+<li><a href="http://www.codeschool.com">Code School</a></li>
+<li><a href="http://teamtreehouse.com">Treehouse</a></li>
+<li><a href="http://tutsplus.com">Tuts+</a></li>
+<li><a href="http://www.codecademy.com">Code Academy</a></li>
+<li><a href="http://stackoverflow.com">StackOverflow</a></li>
+<li><a href="http://www.sitepoint.com">SitePoint</a></li>
+</ul>
 
 <h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
+<a id="frameworks-libraries" class="anchor" href="#frameworks-libraries" aria-hidden="true"><span class="octicon octicon-link"></span></a>Frameworks/ Libraries</h3>
 
-<p>Having trouble with Pages? Check out the documentation at <a href="https://help.github.com/pages">https://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
+<h4>
+<a id="javascript" class="anchor" href="#javascript" aria-hidden="true"><span class="octicon octicon-link"></span></a>Javascript</h4>
+
+<ul>
+<li><a href="https://angularjs.org">Angular</a></li>
+<li><a href="http://addyosmani.github.io/backbone-fundamentals/">Backbone</a></li>
+<li><a href="https://www.yauh.de/articles/376/best-learning-resources-for-meteorjs/">MeteorJS</a></li>
+<li><a href="http://emberjs.com">Ember</a></li>
+<li><a href="http://knockoutjs.com">Knockout</a></li>
+<li><a href="http://facebook.github.io/react/">React</a></li>
+<li><a href="http://rivetsjs.com">Rivet</a></li>
+<li><a href="http://jquery.com">jQuery</a></li>
+<li><a href="https://github.com/petermichaux/maria">Maria MVC</a></li>
+<li><a href="http://vuejs.org">Vue.js</a></li>
+<li><a href="http://weblogs.asp.net/dwahlin/javascript-data-binding-frameworks">DataBinding</a></li>
+<li><a href="http://www.designyourway.net/blog/resources/a-comprehensive-collection-of-javascript-application-frameworks-28-examples/">Others</a></li>
+</ul>
+
+<h4>
+<a id="html--css" class="anchor" href="#html--css" aria-hidden="true"><span class="octicon octicon-link"></span></a>HTML / CSS</h4>
+
+<ul>
+<li><a href="http://usablica.github.io/front-end-frameworks/compare.html?v=2.0">Best Collections</a></li>
+<li><a href="http://www.bootstraphero.com/the-big-badass-list-of-twitter-bootstrap-resources">Bootstrap</a></li>
+<li><a href="https://bootswatch.com">Bootswatch</a></li>
+<li><a href="http://fortawesome.github.io/Font-Awesome/">FontAwesome for Bootrap</a></li>
+<li><a href="http://compass-style.org">Compass</a></li>
+<li><a href="http://foundation.zurb.com">Foundation</a></li>
+<li><a href="http://workless.ikreativ.com">Workless</a></li>
+<li><a href="https://www.dartlang.org">Dart</a></li>
+<li><a href="http://goldengridsystem.com">Golden Grid</a></li>
+<li><a href="http://responsive.gs">Responsive Grid System</a></li>
+<li><a href="http://store.repixdesign.com">Repix Design</a></li>
+<li><a href="http://modernizr.com">Modernizer</a></li>
+<li><a href="http://www.idangero.us/framework7/#.VRQeYkb8tOQ">Framework 7</a></li>
+<li><a href="http://html5boilerplate.com">HTML5 Boilerplate</a></li>
+<li><a href="http://necolas.github.com/normalize.css">Normalize.css</a></li>
+<li><a href="http://www.datatables.net">Datatables</a></li>
+<li>YUI3</li>
+<li><a href="http://alloyui.com">AlloyUI</a></li>
+<li><a href="http://sass-lang.com">Sass</a></li>
+<li><a href="http://diveintohtml5.info">Dive into HTML5</a></li>
+</ul>
+
+<h4>
+<a id="jquery-plugins" class="anchor" href="#jquery-plugins" aria-hidden="true"><span class="octicon octicon-link"></span></a>jQuery Plugins</h4>
+
+<ul>
+<li><a href="http://masonry.desandro.com">Masonry</a></li>
+<li><a href="https://github.com/chixieburr/jquery.shapeshift">ShapeShift</a></li>
+<li><a href="http://xoxco.com/projects/code/aware/">Aware</a></li>
+<li><a href="http://ed-lea.github.io/jquery-collagePlus/">CollagePlus</a></li>
+<li><a href="http://xoxco.com/projects/code/aware/">Aware</a></li>
+</ul>
+
+<h3>
+<a id="workflow" class="anchor" href="#workflow" aria-hidden="true"><span class="octicon octicon-link"></span></a>Workflow</h3>
+
+<ul>
+<li><a href="http://choosealicense.com/">Choose a License</a></li>
+</ul>
+
+<h3>
+<a id="conferences" class="anchor" href="#conferences" aria-hidden="true"><span class="octicon octicon-link"></span></a>Conferences</h3>
+
+<ul>
+<li><a href="http://codefront.io">Codefront</a></li>
+</ul>
+
+<h4>
+<a id="submit-a-link" class="anchor" href="#submit-a-link" aria-hidden="true"><span class="octicon octicon-link"></span></a>Submit a Link</h4>
+
+<p>Feel free to send me a <a href="mailto:lynnschiff@yahoo.com">message</a>, or check out this <a href="https://github.com/chixieburr/allfrontend">repo</a>. </p>
         </section>
 
         <aside id="sidebar">
